<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/FondoGris"
    tools:context=".auth.SignUpActivity">

    <TextView
        android:id="@+id/holaMundoTV_LoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/Amarillo"
        android:textSize="60dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@color/Blanco"
        android:gravity="center"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textSize="20dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="text"
        android:background="@color/Blanco"
        android:layout_margin="40dp"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:background="@color/Blanco"
        android:inputType="text"
        android:layout_margin="40dp"
        android:textStyle="italic"
        android:textSize="20dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/SIGN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:hint="@string/SignUp_boton"
        android:inputType="text"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/LOGIN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/FondoGris"
        android:hint="@string/Login_boton"
        android:inputType="text"
        android:layout_gravity="center"/>
</LinearLayout>