<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoGris"
    android:orientation="vertical"
    tools:context=".configuracionInicial">

    <TextView
        android:id="@+id/Textview5"

        android:layout_width="276dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:text="@string/Bienvenido"
        android:textColor="@color/Amarillo"
        android:textSize="60dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/SeleccionLibro"
        android:textColor="@color/Blanco"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/combo_dias"

        />

    <TextView
        android:id="@+id/Textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/SeleccionTiempo"
        android:textColor="@color/Blanco"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/combo_dias" />

    <TextView
        android:id="@+id/Textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/HorarioPreferente"
        android:textColor="@color/Blanco"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:background="@color/Blanco"
        android:hint="09:00"
        android:inputType="text"
        android:textSize="20dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/botonredondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/redondeado"
        android:text="-->"
        android:textSize="60dp" />


</LinearLayout>